Fixed resources missing image alignment
When an image isn't provided, allow the download box to move across

--- a/resources/scss/non-modular/_resource-single.scss
+++ b/resources/scss/non-modular/_resource-single.scss
@@ -78,7 +78,7 @@
 		}
 
 		@include from(T) {
-			grid-column: span 5 / -1;
+			grid-column: span 5;
 		}
 
 	}
